пофиксил баги - главный баг с диетой. Теперь работает без ошибок